--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,23 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-    }
+    }  },
+  "AllowedHosts": "*",
+  "Email": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "FromEmail": "charlenecaramoan21@gmail.com",
+    "Password": "kdqdfnolecdyohjr"
   },
-  "AllowedHosts": "*"
+  "AppUrl": "https://localhost:5001",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      },
+      "Https": {
+        "Url": "https://localhost:5001"
+      }
+    }
+  }
 }
