changed smtp email

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,8 +12,8 @@
   "Email": {
     "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587,
-    "FromEmail": "charlenecaramoan21@gmail.com",
-    "Password": "kdqdfnolecdyohjr"
+    "FromEmail": "payfair.app@gmail.com",
+    "Password": "vxdrbbirkhglmtrx"
   },
   "AppUrl": "https://localhost:5001",
   "Kestrel": {
